--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "lucide-react": "^0.454.0",
     "next": "14.2.16",
     "next-themes": "^0.4.4",
+    "pinata": "^2.1.1",
     "pino-pretty": "^13.0.0",
     "react": "^18",
     "react-day-picker": "8.10.1",
