--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@helia/unixfs": "^5.0.0",
     "@hookform/resolvers": "^3.9.1",
     "@metaplex-foundation/js": "0.17.12",
     "@metaplex-foundation/mpl-token-metadata": "2.13.0",
@@ -50,6 +51,7 @@
     "@solana/wallet-adapter-wallets": "^0.19.32",
     "@solana/web3.js": "1",
     "@types/jsonwebtoken": "^9.0.9",
+    "arweave": "^1.15.5",
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.9",
     "bs58": "^6.0.0",
@@ -60,6 +62,7 @@
     "embla-carousel-react": "8.5.1",
     "files-from-path": "^1.1.1",
     "formidable": "^3.5.2",
+    "helia": "^5.3.0",
     "input-otp": "1.4.1",
     "jotai": "^2.12.1",
     "jsonwebtoken": "^9.0.2",
